--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                   <table style="padding-top:20px;" cellspacing="0" cellpadding="0" border="0" align="center">
                                     <tr>
                                       <td>
-                                        <a style="font-family: Arial, Helvetica, sans-serif;font-size: 11px;text-align: center;color: #999999;line-height: 13px;font-weight: normal;" href="#">
+                                        <a target="_blank" style="font-family: Arial, Helvetica, sans-serif;font-size: 11px;text-align: center;color: #999999;line-height: 13px;font-weight: normal;" href="https://myaccount.nytimes.com/get-started/payment?o=0fd8cf46-d029-11ea-a072-340cee6a52b6&campaignId=9LUJ9&launch_id=16597945">
                                           View in Browser
                                         </a>
                                       </td>
@@ -147,7 +147,7 @@
                                         <table style="padding-top:20px;padding-bottom:20px;" cellspacing="0" cellpadding="0" border="0" align="center">
                                           <tr>
                                             <td style="text-align:center">
-                                              <a style="color: #FFFFFF;text-align: center;font-family: Arial, sans-serif;font-weight: normal;font-size: 14px;line-height: 18px;text-transform: uppercase;font-weight:bold;text-decoration:none" href="#">
+                                              <a target="_blank" style="color: #FFFFFF;text-align: center;font-family: Arial, sans-serif;font-weight: normal;font-size: 14px;line-height: 18px;text-transform: uppercase;font-weight:bold;text-decoration:none" href="https://myaccount.nytimes.com/get-started/payment?o=0fd8cf46-d029-11ea-a072-340cee6a52b6&campaignId=9LUJ9&launch_id=16597945">
                                                 SPECIAL OFFER: <br class="mobile-style"> SUBSCRIBE FOR <span style="font-weight:normal;text-decoration:line-through;">$4.25</span> $1 A WEEK.
                                               </a>
                                             </td>
@@ -177,13 +177,13 @@
                                   <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                     <tr>
                                       <td class="desktopimg">
-                                        <a href="#">
+                                        <a target="_blank" href="https://www.nytimes.com/?launch_id=16597945">
                                           <img style="width:100%;display:block" src="https://i.postimg.cc/bYKn296L/logo-d.jpg
 " alt="">
                                         </a>
                                       </td>
                                       <td class="mobileimg">
-                                        <a href="#">
+                                        <a target="_blank" href="https://www.nytimes.com/?launch_id=16597945">
                                           <img style="width:100%;display:block" src="https://static.cdn.responsys.net/i5/responsysimages/nyt/contentlibrary/adhoc/2022/q3/09_sept/20220907_usgm_acquisition_sep_em2_mon-334348/images/logo_m.png" alt="">
                                         </a>
                                       </td>
@@ -196,13 +196,13 @@
                                   <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                     <tr>
                                       <td class="desktopimg">
-                                        <a href="#">
+                                        <a target="_blank" href="https://myaccount.nytimes.com/get-started/payment?o=0fd8cf46-d029-11ea-a072-340cee6a52b6&campaignId=9LUJ9&launch_id=16597945">
                                           <img style="width:100%;display:block" src="https://i.postimg.cc/Mpwj9KJQ/Email-2-Regi-Former-Desktop.gif
 " alt="">
                                         </a>
                                       </td>
                                       <td class="mobileimg">
-                                        <a href="#">
+                                        <a target="_blank" href="#https://myaccount.nytimes.com/get-started/payment?o=0fd8cf46-d029-11ea-a072-340cee6a52b6&campaignId=9LUJ9&launch_id=16597945">
                                           <img style="width:100%;display:block" src="https://mwcm.nyt.com/dam/mkt_assets/email/September_Acquisition_Animations/Email-2-Regi-Former_Mobile.gif" alt="">
                                         </a>
                                       </td>
@@ -215,13 +215,13 @@
                                   <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                     <tr>
                                       <td class="desktopimg" >
-                                        <a href="#">
+                                        <a target="_blank" href="https://myaccount.nytimes.com/get-started/payment?o=0fd8cf46-d029-11ea-a072-340cee6a52b6&campaignId=9LUJ9&launch_id=16597945">
                                           <img style="width:100%;display:block" src="https://i.postimg.cc/fW3XLrvJ/regi-headline-d.jpg
 " alt="">
                                         </a>
                                       </td>
                                       <td class="mobileimg">
-                                        <a href="#">
+                                        <a target="_blank" href="https://myaccount.nytimes.com/get-started/payment?o=0fd8cf46-d029-11ea-a072-340cee6a52b6&campaignId=9LUJ9&launch_id=16597945">
                                           <img style="width:100%;display:block" src="https://static.cdn.responsys.net/i5/responsysimages/nyt/contentlibrary/adhoc/2022/q3/09_sept/20220907_usgm_acquisition_sep_em2_mon-334348/images/regi_headline_m.png" alt="">
                                         </a>
                                       </td>
@@ -234,13 +234,13 @@
                                   <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                     <tr>
                                       <td class="desktopimg">
-                                        <a href="#">
+                                        <a  target="_blank "href="https://myaccount.nytimes.com/get-started/payment?o=0fd8cf46-d029-11ea-a072-340cee6a52b6&campaignId=9LUJ9&launch_id=16597945">
                                           <img style="width:100%;display:block" src="https://i.postimg.cc/Qx1TgKwD/regi-STPF-d.jpg
 " alt="">
                                         </a>
                                       </td>
                                       <td class="mobileimg">
-                                        <a href="#">
+                                        <a target="_blank" href="#">
                                           <img style="width:100%;display:block" src="https://static.cdn.responsys.net/i5/responsysimages/nyt/contentlibrary/adhoc/2022/q3/09_sept/20220907_usgm_acquisition_sep_em2_mon-334348/images/regi_STPF_m.png" alt="">
                                         </a>
                                       </td>
@@ -253,13 +253,13 @@
                                   <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                     <tr>
                                       <td class="desktopimg">
-                                        <a href="#">
+                                        <a target="_blank" href="https://www.nytimes.com/subscription?campaignId=8JY8X&launch_id=16597945">
                                           <img style="width:100%;display:block" src="https://i.postimg.cc/3W53JRFC/ADA-Offer.jpg
 " alt="">
                                         </a>
                                       </td>
                                       <td class="mobileimg">
-                                        <a href="#">
+                                        <a target="_blank" href="https://www.nytimes.com/subscription?campaignId=8JY8X&launch_id=16597945">
                                           <img style="width:100%;display:block" src="https://static.cdn.responsys.net/i5/responsysimages/nyt/contentlibrary/adhoc/2022/q3/09_sept/20220907_usgm_acquisition_sep_em2_mon-334348/images/ADA_Offer_Mobile.png" alt="">
                                         </a>
                                       </td>
@@ -290,7 +290,7 @@
                                           <tr>
                                             <td style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;">
                                               Offers not open to current subscribers with the same subscription type. For a Basic Digital Access subscription (Basic Access) your payment method will automatically be charged in advance the introductory offer rate of $4 every 4 weeks for 1 year, and after 1 year the standard rate of $17 every 4 weeks. For an All Digital Access subscription (All Access) your payment method will automatically be charged in advance the introductory offer rate of $6 every 4 weeks for 1 year, and after 1 year the standard rate of $25 every 4 weeks. Your subscription will continue until you <span>
-                                                <a style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;text-decoration:none" href="#">
+                                                <a target="_blank" style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;text-decoration:none" href="https://help.nytimes.com/hc/en-us/articles/115014893968-Terms-of-sale#cancellation">
                                                   Cancel
                                                 </a>
                                               </span>
@@ -322,7 +322,7 @@
                                                     <table  cellspacing="0" cellpadding="0" border="0">
                                                       <tr>
                                                         <td style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;">
-                                                            <a style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;" href="#">
+                                                            <a target="_blank" style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;" href="https://myaccount.nytimes.com/auth/login?response_type=cookie&client_id=acct&redirect_uri=https%3A%2F%2Fmyaccount.nytimes.com%2F%3Flaunch_id%3D16597945">
                                                               Account Login
                                                             </a>
                                                         </td>
@@ -342,7 +342,7 @@
                                                     <table  cellspacing="0" cellpadding="0" border="0">
                                                       <tr>
                                                         <td style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;">
-                                                            <a style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;" href="#">
+                                                            <a target="_blank" style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;" href="https://help.nytimes.com/hc/en-us?launch_id=16597945">
                                                               Help Center
                                                             </a>
                                                         </td>
@@ -367,7 +367,7 @@
                                                     <table  cellspacing="0" cellpadding="0" border="0">
                                                       <tr>
                                                         <td style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;">
-                                                            <a style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;" href="#">
+                                                            <a target="_blank" style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;" href="https://help.nytimes.com/hc/en-us/articles/115014893428-Terms-of-service?launch_id=16597945">
                                                               Terms of Service
                                                             </a>
                                                         </td>
@@ -387,7 +387,7 @@
                                                     <table  cellspacing="0" cellpadding="0" border="0">
                                                       <tr>
                                                         <td style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;">
-                                                            <a style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;" href="#">
+                                                            <a target="_blank" style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;" href="https://www.nytimes.com/privacy/privacy-policy?launch_id=16597945">
                                                               Privacy Policy
                                                             </a>
                                                         </td>
@@ -407,7 +407,7 @@
                                                     <table  cellspacing="0" cellpadding="0" border="0">
                                                       <tr>
                                                         <td style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;">
-                                                            <a style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;" href="#">
+                                                            <a target="_blank" style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;" href="https://www.nytimes.com/privacy/california-notice?launch_id=16597945">
                                                                California Notices
                                                             </a>
                                                         </td>
@@ -427,7 +427,7 @@
                                                     <table  cellspacing="0" cellpadding="0" border="0">
                                                       <tr>
                                                         <td style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;">
-                                                            <a style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;" href="#">
+                                                            <a target="_blank" style="font-family: Arial,Helvetica, Sans Serif;color: #999999;font-size: 11px;line-height: 15px;" href="https://myaccount.nytimes.com/optout?product=MM&token=bd59da8e5512ed53533678d8b917fa815812dd235c4caa00ae88f631b23cb31d350d563522e123079f92cd7b8b9bea72baff4bfd">
                                                                Unsubscribe
                                                             </a>
                                                         </td>
