--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                         </a>
                                       </td>
                                       <td class="mobileimg">
-                                        <a target="_blank" href="#https://myaccount.nytimes.com/get-started/payment?o=0fd8cf46-d029-11ea-a072-340cee6a52b6&campaignId=9LUJ9&launch_id=16597945">
+                                        <a target="_blank" href="https://myaccount.nytimes.com/get-started/payment?o=0fd8cf46-d029-11ea-a072-340cee6a52b6&campaignId=9LUJ9&launch_id=16597945">
                                           <img style="width:100%;display:block" src="https://mwcm.nyt.com/dam/mkt_assets/email/September_Acquisition_Animations/Email-2-Regi-Former_Mobile.gif" alt="">
                                         </a>
                                       </td>
@@ -240,7 +240,7 @@
                                         </a>
                                       </td>
                                       <td class="mobileimg">
-                                        <a target="_blank" href="#">
+                                        <a target="_blank" href="https://myaccount.nytimes.com/get-started/payment?o=0fd8cf46-d029-11ea-a072-340cee6a52b6&campaignId=9LUJ9&launch_id=16597945">
                                           <img style="width:100%;display:block" src="https://static.cdn.responsys.net/i5/responsysimages/nyt/contentlibrary/adhoc/2022/q3/09_sept/20220907_usgm_acquisition_sep_em2_mon-334348/images/regi_STPF_m.png" alt="">
                                         </a>
                                       </td>
